--- a/client/templates/forumPost.html
+++ b/client/templates/forumPost.html
@@ -1,17 +1,31 @@
-<h1>THE SINGLE FORUM POST PAGE</h1>
-<h1>POST TITLE</h1>{{post.title}} <br>
-<h1>POST BODY</h1>{{post.post}} <br>
-<div ng-repeat="p in post.comments">
-<h1>COMMENT</h1>{{p.comment}} <br>
-<h1>COMMENTER</h1>{{p.user}} <br>
+<div style="position:relative; top:20px;" class="container">
+	<h1>THE SINGLE FORUM POST PAGE</h1>
+	<div class="row">
+			<div class="col-sm-6">
+			<h2 style="text-align:left">{{post.title}}<h2>
+			<hr>
+			<h4>{{post.post}}</h4> 
+			<br>
+			<span ng-show="currentUser.username == post.user">
+				<a href="#!/forumUpdate?p={{post._id}}">Update this Post</a>
+			</span>
+		</div>
+		<div class="col-sm-6">
+		<div class="row">
+			<h2>Comments</h2>
+			<div ng-repeat="p in post.comments">
+				{{p.comment}} 
+				<h2>By</h2>
+				{{p.user}}
+			</div>
+			<br>
+			<div ng-submit="comment()">
+				<form method="post">
+					<input type="text" ng-model="comments.comment" placeholder="Comment Here">
+					<input class="btn btn-default" type="submit">
+				</form>
+			</div>
+			</div>
+		</div>
+	</div>
 </div>
-{{comments}}
-<div ng-submit="comment()">
-	<form method="post">
-		<input type="text" ng-model="comments.comment" placeholder="Comment Here">
-		<input type="submit">
-	</form>
-</div>
-<span ng-show="currentUser.username == post.user">
-	<a href="#!/forumUpdate?p={{post._id}}">Update this Post</a>
-</span>
