--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,1 +1,7 @@
-<h1>THE INTRODUCTION PAGE</h1>
+<div class="jumbotron">
+	<h1>A Special Shooter</h1>
+	<video preload="true" autoplay="autoplay" loop="loop" poster="#!/space-earth.jpg">
+		<source src="#!/space-video.mp4" type="video/mp4">
+		<source src="#!/space-video.webm" type="video/webm">
+	</video>
+</div>
