--- a/client/templates/forumCreate.html
+++ b/client/templates/forumCreate.html
@@ -1,8 +1,22 @@
-<h1>THE CREATE FORUM POST  PAGE</h1>
-<div ng-submit="createPost()">
-	<form method="post">
-		<input type="text" ng-model="post.title" placeholder="title">
-		<input type="text" ng-model="post.post" placeholder="post">
-		<input type="submit">
+<h1 style="position:relative; top:20px;">THE CREATE FORUM POST PAGE</h1>
+<div class="container" style="position:relative; top:5em;" ng-submit="createPost()">
+	<form class="form-horizontal" method="post">
+		<div class="form-group">
+			<label class="control-label col-sm-5" for="title">Title</label>
+			<div class="col-sm-3">
+				<input type="text" ng-model="post.title" id="title">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-5" for="post">Post</label>
+			<div class="col-sm-3">
+				<textarea type="text" ng-model="post.post" id="post"></textarea>
+			</div>
+		</div>
+  		<div class="form-group"> 
+      		<div class="col-sm-offset-4 col-sm-4">
+				<button type="submit" class="btn btn-default">Submit</button>
+			</div>
+		</div>
 	</form>
 </div>
