--- a/client/templates/forumUpdate.html
+++ b/client/templates/forumUpdate.html
@@ -1,13 +1,24 @@
-<h1>THE UPDATE FORUM POST PAGE</h1>
+<h1 style="position:relative; top:20px;">THE UPDATE FORUM POST PAGE</h1>
 <span ng-show="currentUser.username == post.user">
-<div ng-submit="editPost()">
-	<form method="post">
-		<input type="text" ng-model="post.post" placeholder="">
-		<input type="submit">
+<div class="container" style="position:relative; top:8em;" ng-submit="editPost()">
+	<form class="form-horizontal" method="post">
+		<div class="form-group">
+			<label class="control-label col-sm-5" for="edit">Edit</label>
+			<div class="col-sm-3">
+				<textarea rows="5" cols="30" type="text" ng-model="post.post" id="edit"></textarea>
+			</div>
+		</div>
+  		<div class="form-group"> 
+      		<div class="col-sm-offset-4 col-sm-4">
+				<button type="submit" class="btn btn-default">Submit</button>
+			</div>
+		</div>
+		<div class="form-group">
+			<button class="btn btn-default" ng-click="deletePost()">DELETE YOUR POST</button>
+		</div>
 	</form>
-	<button ng-click="deletePost()">DELETE YOUR POST</button>
 </div>
 </span>
-<span ng-show="currentUser.username != post.user">
+<span style="position:relative; top:8em;" ng-show="currentUser.username != post.user">
 	YOU CAN'T EDIT THIS POST
 </span>
