--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,9 +1,23 @@
-<h1>THE LOGIN PAGE</h1>
-<div ng-submit="login()">
-	<form  method="post">
-		<input type="text" ng-model="post.username" placeholder="username">
-		<input type="password" ng-model="post.password" placeholder="password">
-		<input type="submit">
+<h1 style="position:relative; top:20px;">THE LOGIN PAGE</h1>
+<div style="position:relative; top:8em; left:25px;" class="container" ng-submit="login()">
+	<form class="form-horizontal" method="post">
+		<div class="form-group">
+			<label class="control-label col-sm-5" for="username">Username</label>
+			<div class="col-sm-3">
+				<input type="text" ng-model="post.username" id="username">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-5" for="password">Password</label>
+			<div class="col-sm-3">
+				<input type="password" ng-model="post.password" id="password">
+			</div>
+		</div>
+  		<div class="form-group"> 
+      		<div class="col-sm-offset-4 col-sm-4">
+				<button type="submit" class="btn btn-default">Submit</button>
+			</div>
+		</div>
 	</form>
 	{{msg}}
 </div>
