--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -1,9 +1,28 @@
-<h1>THE SIGNUP PAGE</h1>
-<div ng-submit="signup()">
-	<form  method="post">
-		<input type="text" ng-model="post.username" placeholder="username">
-		<input type="password" ng-model="post.password" placeholder="password">
-		<textarea rows="6" cols="25" ng-model="post.bio" placeholder="bio"></textarea>
-		<input type="submit">
+<h1 style="position:relative; top:20px;">THE SIGNUP PAGE</h1>
+<div style="position:relative; top:8em;" class="container" ng-submit="signup()">
+	<form class="form-horizontal" method="post">
+		<div class="form-group">
+			<label class="control-label col-sm-5" for="username">Username</label>
+			<div class="col-sm-4">
+				<input type="text" id="username" ng-model="post.username" placeholder="username">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-5" for="password">Password</label>
+			<div class="col-sm-4">
+				<input type="password" ng-model="post.password" id="password" placeholder="password">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-5" for="bio">Biography</label>
+			<div class="col-sm-4">
+				<textarea rows="4" cols="21" id="bio"  ng-model="post.bio" placeholder="bio"></textarea>
+			</div>
+		</div>
+  		<div class="form-group"> 
+      		<div class="col-sm-offset-4 col-sm-4">
+				<button type="submit" class="btn btn-default">Submit</button>
+			</div>
+		</div>
 	</form>
 </div>
