--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
 	<h1>A Special Shooter</h1>
-	<video preload="true" autoplay="autoplay" loop="loop" poster="#!/space-earth.jpg">
-		<source src="#!/space-video.mp4" type="video/mp4">
-		<source src="#!/space-video.webm" type="video/webm">
+	<video preload="true" autoplay="autoplay" loop="loop" poster="../space-earth.jpg">
+		<source src="../space-video.mp4" type="video/mp4">
+		<source src="../space-video.webm" type="video/webm">
 	</video>
 </div>
