--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,7 +1,9 @@
 <div class="jumbotron">
-	<h1>A Special Shooter</h1>
-	<video preload="true" autoplay="autoplay" loop="loop" poster="../space-earth.jpg">
-		<source src="../space-video.mp4" type="video/mp4">
-		<source src="../space-video.webm" type="video/webm">
-	</video>
+	<h1>Dream Chaser</h1>
+	<p>Fight in the Light. Beat Back the Night.</p>
+	<img id="jumbo-icon" src="/client/img/spaceship-icon.png">
 </div>
+
+<footer>
+	<h4>Copyright&copy; Dream Chaser Team</h4>
+</footer>
