Updated jumbotron and froms

--- a/client/templates/contact.html
+++ b/client/templates/contact.html
@@ -1,1 +1,19 @@
-<h1 style="position:relative; top:20px;">THE CONTACT PAGE</h1>
+<div style="position:relative; top:3em;">
+<h1>Contact Us</h1>
+<p>Feel free to contact our support team in case of any problems.</p>
+   <div class="container">
+      <form>
+        <div class="row">
+            <div class="form-group">
+              <label for="topic">Topic</label>
+              <input type="text" class="form-control" id="topic">
+              <label for="email">Email</label>
+              <input type="text" class="form-control" id="email">
+              <label for="question">Question</label>
+              <textarea id="question" class="form-control" rows="6"></textarea>
+            </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+      </form>
+  </div>
+</div>
