--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,20 +1,14 @@
 <h1 style="position:relative; top:20px;">THE LOGIN PAGE</h1>
-<div style="position:relative; top:8em; left:25px;" class="container" ng-submit="login()">
-	<form class="form-horizontal" method="post">
-		<div class="form-group">
-			<label class="control-label col-sm-5" for="username">Username</label>
-			<div class="col-sm-3">
-				<input type="text" ng-model="post.username" id="username">
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-5" for="password">Password</label>
-			<div class="col-sm-3">
-				<input type="password" ng-model="post.password" id="password">
-			</div>
-		</div>
-  		<div class="form-group"> 
-      		<div class="col-sm-offset-4 col-sm-4">
+<div style="position:relative; top:8em;" class="container" ng-submit="login()">
+	<form method="post">
+		<div class="row">
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input class="form-control" type="text" ng-model="post.username" id="username">
+				<br>
+				<label for="password">Password</label>
+				<input class="form-control" type="password" ng-model="post.password" id="password">
+				<br>
 				<button type="submit" class="btn btn-default">Submit</button>
 			</div>
 		</div>
