Updated about page

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -1,1 +1,15 @@
 <h1 style="position:relative; top:20px;">THE ABOUT PAGE</h1>
+
+<div class="container" style="position:relative; top:5em;">
+	<div class="row">
+		<h2>About the Game</h2>
+		<h4>Dream Chaser is our first infinite shooter game in which players take on the role of a dreamer who is trapped in a deep sleep. The player has to travel through dreams, gather power-ups and fight through nightmares to wake up!</h4>
+	</div>
+	<div class="row">
+		<h2>The Team</h2>
+		<h4>Malcolm Brunson: Back-End Developer</h4>
+		<h4>Guessan G. Effi: Project Manager / Junior Front-End Developer</h4>
+		<h4>Malcolm J. Holliday: Game Developer / Back-End Developer</h4>
+		<h4>Rene Pereyra: Senior Front-End Developer and aspiring Full-Stack Developer</h4>
+	</div>
+</div>
