--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
 	<h1>Dream Chaser</h1>
 	<p>Fight in the Light. Beat Back the Night.</p>
-	<a href="https://mholliday6611.github.io/superlamegame/"><img id="jumbo-icon" src="/client/img/spaceship-icon.png"></a>
+	<a href="https://mholliday6611.github.io/ASimpleShooter/"><img id="jumbo-icon" src="/client/img/spaceship-icon.png"></a>
 </div>
